--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -12,10 +12,7 @@ body{
 .bol{
     font-size:12pt;color:#000;font-weight:700
 }
-.content #downloadSimulatorWindow_,.content #file,.content #results,.content #speed{
-    border:1px solid gray;border-radius:7px;background-color:#fff;width:96%;margin:20px auto
-}
-#speedtest{
+.content #downloadSimulatorWindow_,.content #file,.content #results,.content #speed,#speedtest{
     border:1px solid gray;border-radius:7px;background-color:#fff;width:96%;margin:20px auto
 }
 #speed .idkSpeed{
