--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -105,7 +105,7 @@ body{
     #internetSpeed_p:active{
         position:relative;top:2px
     }
-    #fileSize,#internetSpeed,#speedtest{
+    #fileSize,#internetSpeed{
         width:75px;padding:18px 7px 18px 18px
     }
     select{
