--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -5,7 +5,7 @@
     text-align:center
 }
 body{
-    font-family:roboto,sans-serif;background-color:#000;margin:0
+    font-family:roboto,sans-serif;background-color:#2c6d9c;margin:0
 }
 .content{display:block;margin-left:auto;margin-right:auto;width:600px}h1,h2,h3,h4{color:#444}.h1sp{color:#fff;line-height:1
 }
