--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -5,15 +5,15 @@
     text-align:center
 }
 body{
-    font-family:roboto,sans-serif;background-color:#2c6d9c;margin:0
+    font-family:roboto,sans-serif;background-color:#1A2C42;margin:0
 }
-.content{display:block;margin-left:auto;margin-right:auto;width:600px}h1,h2,h3,h4{color:#444}.h1sp{color:#fff;line-height:1
+.content{display:block;margin-left:auto;margin-right:auto;width:600px}h1,h2,h3,h4{color:#444}.h1sp{color:#f0f0e6;line-height:1
 }
 .bol{
     font-size:12pt;color:#000;font-weight:700
 }
 .content #downloadSimulatorWindow_,.content #file,.content #results,.content #speed{
-    border:1px solid gray;border-radius:7px;background-color:#fff;width:96%;margin:20px auto
+    border:1px solid gray;border-radius:7px;background-color:#f0f0e6;width:96%;margin:20px auto
 }
 #speed .idkSpeed{
     font-size:8pt;line-height:3
@@ -28,7 +28,7 @@ body{
     font-size:8pt
 }
 #results{
-    background-color:#FFF!important;visibility:visible
+    background-color:#f0f0e6!important;visibility:visible
 }
 #results .time
 {font-style:normal;font-size:28px
@@ -36,30 +36,7 @@ body{
 #results .time em{
     font-style:normal;font-size:32px
 }
-#downloadSimulatorWindow{
-    position:relative;width:600px;height:119px;-color:gray;opacity:.5
-}
-#downloadSimulatorWindow .filename{
-    position:absolute;left:85px;top:18px;width:355px;height:15px
-}
-#downloadSimulatorWindow .progresrbar{
-    position:absolute;left:85px;top:38px;width:398px;height:22px
-}
-#downloadSimulatorWindow progress{
-    width:100%;height:22px
-}
-#downloadSimulatorWindow .percent{
-    position:absolute;left:435px;top:15px;width:49px;height:17px;text-align:right
-}
-#downloadSimulatorWindow .details{
-    position:absolute;left:85px;top:63px;width:401px;height:19px;padding-left:.5em;margin-bottom:10px;font-size:14px
-}
-#downloadSimulatorWindow .icon{
-    position:absolute;left:10px;top:18px;width:64px;height:64px
-}
-#downloadSimulatorWindow .ps{
-    position:absolute;right:0;bottom:-2px;width:514px;height:18px;padding-right:4px;font-size:10px;text-align:right
-}
+
 .center,.footer,button{
     text-align:center
 }
@@ -79,28 +56,28 @@ body{
         line-height:35px;font-size:26px;font-weight:300;text-shadow:0 1px rgba(white,.75)
     }
     input{
-        margin:2px;font-size:18px;background:#fff;border:2px solid #ebebeb;border-radius:4px;-webkit-box-shadow:inset 0 -2px #ebebeb;box-shadow:inset 0 -2px #ebebeb
+        margin:2px;font-size:18px;background:#fff;border:2px solid #b8b8b4;border-radius:4px;-webkit-box-shadow:#b8b8b4;
     }
     button{
-        background-color:#2c6d9c;border-radius:6px;color:#fff;font-weight:700;border:none;width:187px;height:54px;position:relative;font-size:17px;cursor:pointer;margin-top:0;top:9px
+        background-color:#F4DB7D;border-radius:6px;color:#fff;font-weight:700;border:none;width:187px;height:54px;position:relative;font-size:17px;cursor:pointer;margin-top:0;top:9px
     }
     button:active{
         position:relative;top:11px
     }
-    .login-top-colour{
-        content:'';position:relative;bottom:0;left:0;right:0;height:8px;background:#c4e17f;border-radius:5px 5px 0 0;background-image:-webkit-linear-gradient(left,#c4e17f,#c4e17f 12.5%,#f7fdca 12.5%,#f7fdca 25%,#fecf71 25%,#fecf71 37.5%,#f0776c 37.5%,#f0776c 50%,#db9dbe 50%,#db9dbe 62.5%,#c49cde 62.5%,#c49cde 75%,#669ae1 75%,#669ae1 87.5%,#62c2e4 87.5%,#62c2e4);background-image:-moz-linear-gradient(left,#c4e17f,#c4e17f 12.5%,#f7fdca 12.5%,#f7fdca 25%,#fecf71 25%,#fecf71 37.5%,#f0776c 37.5%,#f0776c 50%,#db9dbe 50%,#db9dbe 62.5%,#c49cde 62.5%,#c49cde 75%,#669ae1 75%,#669ae1 87.5%,#62c2e4 87.5%,#62c2e4);background-image:-o-linear-gradient(left,#c4e17f,#c4e17f 12.5%,#f7fdca 12.5%,#f7fdca 25%,#fecf71 25%,#fecf71 37.5%,#f0776c 37.5%,#f0776c 50%,#db9dbe 50%,#db9dbe 62.5%,#c49cde 62.5%,#c49cde 75%,#669ae1 75%,#669ae1 87.5%,#62c2e4 87.5%,#62c2e4);background-image:linear-gradient(to right,#c4e17f,#c4e17f 12.5%,#f7fdca 12.5%,#f7fdca 25%,#fecf71 25%,#fecf71 37.5%,#f0776c 37.5%,#f0776c 50%,#db9dbe 50%,#db9dbe 62.5%,#c49cde 62.5%,#c49cde 75%,#669ae1 75%,#669ae1 87.5%,#62c2e4 87.5%,#62c2e4)
+    #internetSpeed{
+        padding:18px 22px; border: #fff solid 3px;background-color: #f0f0e6;
     }
     #internetSpeed_p1{
-        padding:18px 22px
+        padding:18px 22px; border: #fff solid 3px;background-color: #f0f0e6;
     }
     #internetSpeed_p2{
-        padding:18px 22px
+        padding:18px 22px; border: #fff solid 3px;background-color: #f0f0e6;
     }
     #internetSpeed_p2:hover{
-        background-color:#F15A5C;transition-duration:.7s;color:azure
+        background-color:#FF6A3D;transition-duration:.3s;color:azure
     }
     #internetSpeed_p1:hover{
-        background-color:#62c2e4;transition-duration:.7s;color:azure
+        background-color:#9DAAF2;transition-duration:.3s;color:azure
     }
     #internetSpeed_p:active{
         position:relative;top:2px
