--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -66,7 +66,7 @@ body{
 #speedtest_mobile a{
     color:#FFF;margin:20px
 }
-    .center,{
+    .center{
         line-height:35px;font-size:26px;font-weight:300;text-shadow:0 1px rgba(white,.75)
     }
     input{
