--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -120,14 +120,7 @@ select{
     padding:18px 10px;border:0;font-size:18px;margin:2px
 }
 input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;margin:0}
-.container {
-	position: relative;
-	margin-top: 100px;
-}
-.container img {
-	display: block;
-	width: 100%;
-}
+
 nav {
 	position: fixed;
 	z-index: 10;
@@ -191,7 +184,7 @@ nav .icon-burger .line {
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1366px) {
 	nav .logo {
 		float: none;
 		width: auto;
@@ -236,6 +229,18 @@ nav .icon-burger .line {
 		opacity: 0;
 	}
 	
+}
+@media screen and (max-width:820px){
+    nav .logo {
+        float: center;
+        width: 40%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        font-size: 22px;
+        color: #fff;
+        margin-left: 70px;
+    }
 }
     @media screen and (max-width:600px){
         .content,#sitename{
