--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -2,6 +2,12 @@ html{
     scroll-behavior: smooth;
     font-family: 'Fira Sans', sans-serif;
 }
+.p123{
+     text-align:left;
+     margin-left: 30px;
+     font-size: 20px;
+     font-family: 'Fira Sans', sans-serif;
+ }
 #file input,#speed input{
     text-align:right
 }
