--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -216,6 +216,9 @@ nav .icon-burger .line {
         border: solid 1px;
         border-radius: 20px;
 	}
+    nav .links a:hover{
+        color: #F4DB7D;
+    }
 	nav .links a {
 		font-size: 20px;
 	}
