--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -127,12 +127,11 @@ select{
 }
 input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;margin:0}
 #scrollupbtn {
-    bottom: 20px;
+    bottom: 12px;
     z-index: 99;
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 15px;
     border-radius: 4px;  
     display: none;
     position: fixed;
@@ -143,15 +142,15 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
     border-radius: 360px;
     padding:0px;
     font-weight:0;
-    width:50px;
-    height:50px;
-    font-size:45px;
+    width:33px;
+    height:33px;
+    font-size:29px;
   }
   
   #scrollupbtn:hover {
-    box-shadow:  0px 0px 5px 5px #F4DB7D;
-    -webkit-box-shadow: 0px 0px 5px 5px #F4DB7D;
-    -moz-box-shadow: 0px 0px 5px 5px #F4DB7D;
+    box-shadow:  0px 0px 3px 3px #F4DB7D;
+    -webkit-box-shadow: 0px 0px 3px 3px #F4DB7D;
+    -moz-box-shadow: 0px 0px 3px 3px #F4DB7D;
   }
 nav {
 	position: fixed;
@@ -275,6 +274,15 @@ nav .icon-burger .line {
         color: #fff;
         margin-left: 70px;
     }
+    #scrollupbtn {
+        margin-top: 700px;
+    }
+    #scrollupbtn:hover{
+        box-shadow:  0px 0px 0px 0px #F4DB7D;
+        -webkit-box-shadow: 0px 0px 0px 0px #F4DB7D;
+        -moz-box-shadow: 0px 0px 0px 0px #F4DB7D;
+        opacity: 70%;
+    }
 }
     @media screen and (max-width:600px){
         .content,#sitename{
@@ -289,6 +297,8 @@ nav .icon-burger .line {
         h4{
             font-size:.8em
         }
+        #scrollupbtn {
+            margin-top: 500px;
     }
     @media screen and (max-width:1199px){
         .mobile{
