--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -130,13 +130,14 @@ nav {
 	left: 0;
 	right: 0;
 	top: 0;
+    bottom: 50px;
+    margin-bottom: 50px;
 	font-family: 'Montserrat', sans-serif;
 	padding: 0 5%;
 	height: 50px;
 	background-color: #F4DB7D;
     border: #000 solid 1px;
-    border-radius: 20px;
-    margin: 10px 10px 10px 10px;
+    border-radius: 2px;
 }
 nav .logo {
 	float: left;
@@ -197,9 +198,9 @@ nav .icon-burger .line {
 		float: none;
 		position: fixed;
 		z-index: 9;
-		left: 10px;
-		right: 10px;
-		top: 61px;
+		left: 20px;
+		right: 20px;
+		top: 51px;
 		bottom:50%;
 		width: auto;
 		height: fit-content;
@@ -209,9 +210,9 @@ nav .icon-burger .line {
         opacity: 60%;
 		overflow: hidden;
 		box-sizing: border-box;
-		transition: all .5s ease-in-out;
+		transition: all .1s ease-in-out;
         border: solid 1px;
-        border-radius: 20px;
+        border-radius: 2px;
 	}
     nav .links a:hover{
         color: #F4DB7D;
