--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -20,16 +20,27 @@ body{
     background-color:#1A2C42;
     margin: 20px;
 }
-.content,#sitename{display:block;margin-left:auto;margin-right:auto;width:600px}h1,h2,h3,h4{color:#444}.h1sp{color:#f0f0e6;line-height:1
+.content,#sitename{display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width:600px}h1,h2,h3,h4{color:#444}.h1sp{color:#f0f0e6;line-height:1
 }
 .bol{
-    font-size:12pt;color:#000;font-weight:700
+    font-size:12pt;
+    color:#000;
+    font-weight:700
 }
 .content #downloadSimulatorWindow_,.content #file,.content #results,.content #speed{
-    border:1px solid gray;border-radius:7px;background-color:#f0f0e6;width:96%;margin-top: 2px;
+    border:1px solid gray;
+    border-radius:7px;
+    background-color:#f0f0e6;
+    width:96%;
+    margin-top: 2px;
 }
 #sitename{
-    border:1px solid gray;border-radius:7px;background-color:#f0f0e6;
+    border:1px solid gray;
+    border-radius:7px;
+    background-color:#f0f0e6;
 }
 #speed{
     padding-bottom: 20px;
@@ -49,51 +60,85 @@ body{
     font-size:8pt
 }
 #results{
-    background-color:#f0f0e6!important;visibility:visible
+    background-color:#f0f0e6!important;
+    visibility:visible
 }
 #results .time
-{font-style:normal;font-size:28px
+{font-style:normal;
+    font-size:28px
 }
 #results .time em{
-    font-style:normal;font-size:32px
+    font-style:normal;
+    font-size:32px
 }
 
 .center,.footer,button{
     text-align:center
 }
 .footer{
-    font-size:9pt;padding:1em;background-color:#000
+    font-size:9pt;
+    padding:1em;
+    background-color:#000
 }
 #calculateButton{
-    padding-left:1em;padding-right:1em
+    padding-left:1em;
+    padding-right:1em
 }#speedtest_mobile
 {
-    display:none;margin:30px;background:#333;color:#FFF
+    display:none;
+    margin:30px;
+    background:#333;
+    color:#FFF
 }
 #speedtest_mobile a{
-    color:#FFF;margin:20px
+    color:#FFF;
+    margin:20px
 }
 .center{
-    line-height:35px;font-size:26px;font-weight:300;text-shadow:0 1px rgba(white,.75)
+    line-height:35px;
+    font-size:26px;
+    font-weight:300;
+    text-shadow:0 1px rgba(white,.75)
 }
 input{
-    margin:2px;font-size:18px;background:#fff;border:2px solid #b8b8b4;border-radius:4px;box-shadow:#b8b8b4;
+    margin:2px;
+    font-size:18px;
+    background:#fff;
+    border:2px solid #b8b8b4;
+    border-radius:4px;
+    box-shadow:#b8b8b4;
 }
 button{
-    background-color:#F4DB7D;border: #fff solid 3px;border-radius:6px;color:#fff;font-weight:700;border:none;width:187px;height:54px;position:relative;font-size:17px;cursor:pointer;margin-top:0;top:9px
+    background-color:#F4DB7D;
+    border: #fff solid 3px;
+    border-radius:6px;color:#fff;
+    font-weight:700;
+    border:none;
+    width:187px;
+    height:54px;
+    font-size:17px;
+    cursor:pointer;
+    margin-top:0;
+    top:9px;
 }
 
 button:active{
-    position:relative;top:11px
+    top:11px
 }
 #internetSpeed{
-    padding:18px 22px; border: #fff solid 3px;background-color: #f0f0e6;
+    padding:18px 22px;
+     border: #fff solid 3px;
+     background-color: #f0f0e6;
 }
 #internetSpeed_p1{
-    padding:18px 20px; border: #fff solid 3px;background-color: #f0f0e6;
+    padding:18px 20px;
+     border: #fff solid 3px;
+     background-color: #f0f0e6;
 }
 #internetSpeed_p2{
-    padding:18px 20px; border: #fff solid 3px;background-color: #f0f0e6;
+    padding:18px 20px;
+     border: #fff solid 3px;
+     background-color: #f0f0e6;
 }
 #internetSpeed_p2:hover{
     background-color:#FF6A3D;transition-duration:.2s;color:azure;
@@ -124,158 +169,22 @@ select{
 }
 input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;margin:0}
 
-nav {
-	position: fixed;
-	z-index: 10;
-	left: 0;
-	right: 0;
-	top: 0;
-    bottom: 50px;
-    margin-bottom: 50px;
-	font-family: 'Montserrat', sans-serif;
-	padding: 0 5%;
-	height: 50px;
-	background-color: #F4DB7D;
-    border: #000 solid 1px;
-    border-radius: 2px;
-}
-nav .logo {
-	float: left;
-	width: 40%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	font-size: 24px;
-	color: #fff;
-}
-nav .links {
-	float: right;
-	padding: 0;
-	margin: 0;
-	width: 60%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-nav .links li {
-	list-style: none;
-}
-nav .links a {
-	display: block;
-	padding: 1em;
-	font-size: 16px;
-	font-weight: bold;
-	color: #fff;
-	text-decoration: none;
-}
-#nav-toggle {
-	position: absolute;
-	top: -100px;
-}
-nav .icon-burger {
-	display: none;
-	position: absolute;
-	right: 5%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-nav .icon-burger .line {
-	width: 30px;
-	height: 5px;
-	background-color: #fff;
-	margin: 5px;
-	border-radius: 3px;
-	transition: all .3s ease-in-out;
-}
-@media screen and (max-width: 1900px) {
-	nav .logo {
-		float: none;
-		width: auto;
-		justify-content: center;
-	}
-	nav .links {
-        display: none;
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 20px;
-		right: 20px;
-		top: 51px;
-		bottom:50%;
-		width: auto;
-		height: fit-content;
-		flex-direction: row;
-		justify-content: space-between;
-		background-color: #1A2C42;
-        opacity: 60%;
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .1s ease-in-out;
-        border: solid 1px;
-        border-radius: 2px;
-	}
-    nav .links a:hover{
-        color: #F4DB7D;
-    }
-	nav .links a {
-		font-size: 20px;
-	}
-	nav :checked ~ .links {
-		bottom: 0;
-        display: flex;
-	}
-	nav .icon-burger {
-		display: block;
-	}
-	nav :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
-	}
-	
-}
-@media screen and (max-width:820px){
-    nav .logo {
-        float: center;
-        width: 40%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        font-size: 22px;
-        color: #fff;
-        margin-left: 70px;
-    }
-    nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 10px;
-		right: 10px;
-		top: 61px;
-		bottom: 100%;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-between;
-		background-color: #1A2C42;
-        opacity: 60%;
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .5s ease-in-out;
-        border: solid 1px;
-        border-radius: 20px;
-	}
-    nav .links a:hover{
-        color: #F4DB7D;
-    }
-	nav .links a {
-		font-size: 20px;
-	}
-}
+#navbar {
+    background-color: #F4DB7D;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: block;
+    transition: top 0.3s;
+    margin-left: -20px;
+  }
+  
+  #navbar h1 {
+    display: block;
+    color: #fff;
+    text-align: center;
+    font-size: x-large;
+  }
     @media screen and (max-width:600px){
         .content,#sitename{
             width:100%
@@ -308,3 +217,91 @@ nav .icon-burger .line {
         }
     }
 } 
+
+#navbar {
+	position: fixed;
+}
+#navbar .links {
+    position: fixed;
+	float: left;
+	padding: 0;
+	margin: 0;
+	width: 60%;
+	height: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+#navbar .links li {
+	list-style: none;
+}
+#navbar .links a {
+	display: block;
+	padding: 1em;
+	font-size: 16px;
+	font-weight: bold;
+	color: #fff;
+	text-decoration: none;
+}
+.nav-toggle {
+	position: absolute;
+	top: -100px;
+}
+#navbar .icon-burger {
+	display: none;
+	position: absolute;
+	right: 5%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+#navbar .icon-burger .line {
+	width: 30px;
+	height: 5px;
+	background-color: #fff;
+	margin: 5px;
+	border-radius: 3px;
+	transition: all .3s ease-in-out;
+}
+@media screen and (max-width: 10000px) {
+	#navbar .links {
+            float: left;
+            position: fixed;
+            z-index: 9;
+            bottom: 100%;
+            width: fit-content;
+            height: fit-content;
+            flex-direction: column;
+            justify-content: space-between;
+            background-color: #1A2C42;
+            opacity: 60%;
+            margin-left: 80%;
+            box-sizing: border-box;
+            transition: all .5s ease-in-out;
+            border: solid 1px;
+            border-radius: 20px;
+            margin-bottom: 350px;
+        }
+    #navbar .links a:hover{
+        color: #F4DB7D;
+    }
+	#navbar .links a {
+		font-size: 20px;
+	}
+	#navbar :checked ~ .links {
+		bottom: 0;
+        display: flex;
+	}
+	#navbar .icon-burger {
+		display: block;
+	}
+	#navbar :checked ~ .icon-burger .line:nth-child(1) {
+		transform: translateY(10px) rotate(225deg);
+	}
+	#navbar :checked ~ .icon-burger .line:nth-child(3) {
+		transform: translateY(-10px) rotate(-225deg);
+	}
+	#navbar :checked ~ .icon-burger .line:nth-child(2) {
+		opacity: 0;
+	}
+	
+}
