--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -223,7 +223,7 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 }
 #navbar .links {
     position: fixed;
-	float: left;
+	float: right;
 	padding: 0;
 	margin: 0;
 	width: 60%;
@@ -265,6 +265,7 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 @media screen and (max-width: 10000px) {
 	#navbar .links {
             float: left;
+            text-align: center;
             position: fixed;
             z-index: 9;
             bottom: 100%;
@@ -274,12 +275,12 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
             justify-content: space-between;
             background-color: #1A2C42;
             opacity: 60%;
-            margin-left: 80%;
+            margin-left: 75%;
             box-sizing: border-box;
             transition: all .5s ease-in-out;
             border: solid 1px;
             border-radius: 20px;
-            margin-bottom: 350px;
+            margin-bottom: 200px;
         }
     #navbar .links a:hover{
         color: #F4DB7D;
@@ -304,4 +305,10 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 		opacity: 0;
 	}
 	
+}
+@media screen and (max-width:1000px) {
+    #navbar .links {
+        margin-left: 60%;
+        margin-bottom: 170px;
+    }
 }
