--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -221,7 +221,7 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 #navbar {
 	position: fixed;
 }
-#navbar .links {
+#navbar #links {
     position: fixed;
 	float: right;
 	padding: 0;
@@ -232,10 +232,10 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 	justify-content: space-around;
 	align-items: center;
 }
-#navbar .links li {
+#navbar #links li {
 	list-style: none;
 }
-#navbar .links a {
+#navbar #links a {
 	display: block;
 	padding: 1em;
 	font-size: 16px;
@@ -247,28 +247,28 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 	position: absolute;
 	top: -100px;
 }
-#navbar .icon-burger {
+#navbar #icon-burger {
 	display: none;
 	position: absolute;
 	right: 5%;
 	top: 50%;
 	transform: translateY(-50%);
 }
-#navbar .icon-burger .line {
+#navbar #icon-burger .line {
 	width: 30px;
 	height: 5px;
 	background-color: #fff;
 	margin: 5px;
 	border-radius: 3px;
-	transition: all .3s ease-in-out;
 }
 @media screen and (max-width: 10000px) {
-	#navbar .links {
+	#navbar #links {
+        visibility: hidden;
             float: left;
             text-align: center;
             position: fixed;
             z-index: 9;
-            bottom: 100%;
+            bottom: 0;
             width: fit-content;
             height: fit-content;
             flex-direction: column;
@@ -277,38 +277,46 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
             opacity: 90%;
             margin-left: 75%;
             box-sizing: border-box;
-            transition: all .5s ease-in-out;
             border: solid 1px;
             border-radius: 20px;
             margin-bottom: 200px;
         }
-    #navbar .links a:hover{
+    #navbar #links a:hover{
         color: #F4DB7D;
     }
-	#navbar .links a {
+	#navbar #links a {
 		font-size: 20px;
 	}
-	#navbar :checked ~ .links {
-		bottom: 0;
-        display: flex;
+	#navbar :checked ~ #links {
+		visibility: visible;
 	}
-	#navbar .icon-burger {
+	#navbar #icon-burger {
 		display: block;
 	}
-	#navbar :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
-	}
-	#navbar :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
-	}
-	#navbar :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
-	}
+	
 	
 }
 @media screen and (max-width:1000px) {
-    #navbar .links {
+    #navbar #links {
         margin-left: 60%;
         margin-bottom: 120px;
     }
+}
+#navbar #icon-burger2 {
+    visibility: hidden;
+	display: none;
+	position: absolute;
+	right: 5%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+#navbar #icon-burger2 .line {
+	width: 30px;
+	height: 5px;
+	background-color: #fff;
+	margin: 5px;
+	border-radius: 3px;
+}
+#navbar #icon-burger2 {
+    display: block;
 }
