--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -268,18 +268,15 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
             text-align: center;
             position: fixed;
             z-index: 9;
-            bottom: 0;
-            width: fit-content;
-            height: fit-content;
+            width: 100%;
+            height: 95%;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: space-around;
             background-color: #1A2C42;
             opacity: 90%;
-            margin-left: 75%;
             box-sizing: border-box;
             border: solid 1px;
             border-radius: 20px;
-            margin-bottom: 200px;
         }
     #navbar #links a:hover{
         color: #F4DB7D;
@@ -295,12 +292,6 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
 	}
 	
 	
-}
-@media screen and (max-width:1000px) {
-    #navbar #links {
-        margin-left: 60%;
-        margin-bottom: 120px;
-    }
 }
 #navbar #icon-burger2 {
     visibility: hidden;
