--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -269,9 +269,9 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
             position: fixed;
             z-index: 9;
             width: 100%;
-            height: 95%;
+            height: 90%;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: space-between;
             background-color: #1A2C42;
             opacity: 90%;
             box-sizing: border-box;
