--- a/pro 1/style.css
+++ b/pro 1/style.css
@@ -9,6 +9,7 @@ html{
      font-family: 'Fira Sans', sans-serif;
      padding: 0%;
  }
+ 
 #file input,#speed input{
     text-align:right
 }
@@ -72,18 +73,14 @@ body{
     font-size:32px
 }
 
-.center,.footer,button{
+.center,button{
     text-align:center
-}
-.footer{
-    font-size:9pt;
-    padding:1em;
-    background-color:#000
 }
 #calculateButton{
     padding-left:1em;
     padding-right:1em
-}#speedtest_mobile
+}
+#speedtest_mobile
 {
     display:none;
     margin:30px;
@@ -208,9 +205,6 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
         .desktophead,.desktopleftside,.desktoprightside,label{
             display:none
         }
-        .footer a{
-            text-align:center;line-height:3;font-size:9pt;padding:1.6em
-        }
     }@media screen and (min-width:1200px){
         .mobile{
             display:none
@@ -269,7 +263,7 @@ input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-
             position: fixed;
             z-index: 9;
             width: 100%;
-            height: 90%;
+            height: 100%;
             flex-direction: column;
             justify-content: space-between;
             background-color: #1A2C42;
